--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "postcss": "^8.4.14",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "laravel-vite-plugin": "^0.7.4"
     }
 }
